--- a/slideshow/static/style.css
+++ b/slideshow/static/style.css
@@ -226,6 +226,10 @@ form {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
+.split-grid[hidden] {
+  display: none;
+}
+
 .split-grid h4 {
   margin: 0 0 0.5rem 0;
 }
@@ -257,6 +261,24 @@ form {
   text-decoration: none;
   font-weight: 600;
   margin-top: 0.5rem;
+}
+
+.table-actions .button-link {
+  margin-top: 0;
+}
+
+.playlist-preview {
+  width: 88px;
+  height: 56px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(15, 23, 42, 0.6);
+}
+
+.status-block p strong {
+  display: inline-block;
+  min-width: 6rem;
 }
 
 .hint-list {
