--- a/slideshow/templates/media.html
+++ b/slideshow/templates/media.html
@@ -33,6 +33,9 @@
             </td>
             <td>
               <div class="table-actions">
+                {% if source.type == 'smb' %}
+                <a class="button-link" href="{{ url_for('edit_source', name=source.name) }}">Bearbeiten</a>
+                {% endif %}
                 <form method="post" action="{{ url_for('toggle_auto_scan', name=source.name) }}">
                   {% if source.auto_scan %}
                   <input type="hidden" name="enabled" value="0" />
