Improve dashboard previews and splitscreen controls

--- a/slideshow/templates/layout.html
+++ b/slideshow/templates/layout.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Slideshow{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
   </head>
-  <body>
+  <body class="theme-{{ current_theme or 'mid' }}">
     <header class="topbar">
       <h1>Slideshow Steuerung</h1>
       <div class="version">Version {{ slideshow_version }}</div>
