--- a/slideshow/templates/media.html
+++ b/slideshow/templates/media.html
@@ -88,7 +88,7 @@
       </label>
       <button type="submit">Quelle speichern</button>
     </form>
-    <p class="muted">Die Pfadangabe darf optional Unterordner enthalten (z.&nbsp;B. <code>\\\\server\\share\\bilder</code>); sie werden automatisch erkannt.</p>
+    <p class="muted">Die Pfadangabe darf optional Unterordner enthalten (z.&nbsp;B. <code>\\\\server\\share\\bilder</code>) und sollte im UNC-Format erfolgen; Unterordner werden automatisch erkannt.</p>
   </article>
 </section>
 {% endblock %}
